feat: tailwind theme

--- a/biome.json
+++ b/biome.json
@@ -55,6 +55,14 @@
           }
         }
       }
+    },
+    {
+      "includes": ["packages/tailwind-theme/**/*.css"],
+      "css": {
+        "parser": {
+          "tailwindDirectives": true
+        }
+      }
     }
   ]
 }
