--- a/packages/ui-webc/package.json
+++ b/packages/ui-webc/package.json
@@ -34,7 +34,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Scouterna/j26-components.git"
+    "url": "https://github.com/Scouterna/j26-components.git",
+    "directory": "packages/ui-webc"
   },
   "files": [
     "dist/",
