--- a/packages/design-tokens/package.json
+++ b/packages/design-tokens/package.json
@@ -11,7 +11,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Scouterna/j26-components.git"
+    "url": "https://github.com/Scouterna/j26-components.git",
+    "directory": "packages/design-tokens"
   },
   "type": "module",
   "scripts": {
@@ -19,7 +20,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "packageManager": "pnpm@10.24.0",
   "devDependencies": {
     "style-dictionary": "^5.1.1"
