chore: skip minification during dev builds

--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -30,6 +30,8 @@ jobs:
         run: pnpm install
 
       - name: Build Packages
+        env:
+          STENCIL_SKIP_MINIFY: "true"
         run: pnpm run build
 
       - name: Build Storybook
