--- a/packages/ui-webc/package.json
+++ b/packages/ui-webc/package.json
@@ -43,7 +43,7 @@
   ],
   "scripts": {
     "build": "stencil build",
-    "dev": "stencil build --watch",
+    "dev": "STENCIL_SKIP_MINIFY=true stencil build --watch",
     "serve": "stencil build --watch --serve",
     "test": "stencil test --spec --e2e",
     "test:watch": "stencil test --spec --e2e --watchAll",
